# lab5_ch

./: .gitignore  CMakeLists.txt
src/: main.cpp  task.h  task1.cpp  task2.cpp  task3.cpp  task4.cpp
